# chat

./: .gitignore  CMakeLists.txt  def_makefile  macosx_makefile  ubuntu_x86_64_makefile
src/: chat_client.cpp  chat_server.cpp
src/chat_client_core/: ChatClient.cpp  ChatClient.h  ChatClientOutput.cpp  ChatClientOutput.h  ChatClientUI.cpp  ChatClientUI.h  IChatClientProcessor.h
src/chat_client_core/ui/: ChatClientOutput.cpp  ChatClientOutput.h
src/chat_messages/: ChatMessage.cpp  ChatMessage.h  ChatMessageFactory.h  HumanChatMessage.cpp  HumanChatMessage.h  PrivateChatMessage.cpp  PrivateChatMessage.h  PublicChatMessage.cpp  PublicChatMessage.h  UserListMessage.cpp  UserListMessage.h  chat_message_types.h
src/chat_server_core/: ChatServer.cpp  ChatServer.h  ChatServerConsole.h  ChatUserConnection.cpp  ChatUserConnection.h  IChatServerConnectionProcessor.h
src/chat_server_core/deprecated/: ChatServerConsole.cpp  ChatServerConsole.h
src/common/: log.h
